[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pubmed_tools"
version = "0.1.0"
description = "A Python SDK for interacting with PubMed's API"
authors = [
    { name = "TanGentleman", email = "tanuj@cmu.edu" }
]
dependencies = [
    "requests",
    "xmltodict",
    "pandas",
    "reportlab"
]
requires-python = ">=3.7"

[tool.pytest.ini_options]
testpaths = ["pubmed_tools/tests"]
python_files = ["test_*.py"]
addopts = "--cov=pubmed_tools --cov-report=term-missing" 